kubernetes/apps/adguardhome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-dns
  namespace: adguardhome
  annotations:
    metallb.universe.tf/loadBalancerIPs: 192.168.99.121
spec:
  type: LoadBalancer
  ports:
  - name: dns-tcp
    port: 53
    protocol: TCP
    targetPort: 53
  - name: dns-udp
    port: 53
    protocol: UDP
    targetPort: 53
  selector:
    app: adguardhome
---
apiVersion: v1
kind: Service
metadata:
  name: adguardhome-web
  namespace: adguardhome
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  selector:
    app: adguardhome
